<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical"
	android:gravity="top|center">

	<TextView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/intro"
		android:textAlignment="center"
		android:layout_margin="15dp"/>

	<LinearLayout
		android:layout_width="match_parent"
		android:orientation="horizontal"
		android:gravity="top|center"
		android:layout_marginLeft="15dp"
		android:layout_marginRight="15dp"
		android:layout_height="wrap_content">

		<EditText
			android:layout_width="wrap_content"
			android:ems="10"
			android:layout_height="wrap_content"
			android:id="@+id/folder_path"
			android:hint="@string/enter_folder_path"
			android:layout_weight="3"/>

		<Button
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/chose_directory"
			android:id="@+id/chose_dir"
			android:gravity="center"
			android:layout_weight="1.0"/>

	</LinearLayout>

	<Button
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/hide_images"
		android:id="@+id/hide_images"
		android:gravity="center"
		android:layout_margin="15dp"/>

	<Button
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/show_images"
		android:id="@+id/show_images"
		android:gravity="center"
		android:layout_marginBottom="15dp"/>

	<ScrollView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content">

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:id="@+id/txtview_file_list"/>

	</ScrollView>

</LinearLayout>

